<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DefaultFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <!-- <androidx.cardview.widget.CardView
            android:id="@+id/crd_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            app:cardCornerRadius="4dp"
            android:layout_margin="@dimen/d16">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sign_in"
                    android:layout_margin="@dimen/d16"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MyTextInputLayout"
                    android:layout_below="@+id/txt_sign_in"
                    app:hintTextAppearance="@style/text_apperence">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_txt_user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:hint="USER ID" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MyTextInputLayout"
                    app:hintTextAppearance="@style/text_apperence"
                    android:layout_below="@+id/txt_user_id">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_txt_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/text_apperence"
                        android:textColor="@android:color/black"
                        android:hint="Password"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/txt_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_user_password"
                    android:layout_alignParentRight="true"
                    android:text="Forget Password"
                    android:layout_marginRight="16dp"
                    android:textColor="#1F35AC"/>
                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textColor="@android:color/white"
                    android:background="@drawable/corner_button_shape"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/d16"
                    android:layout_marginTop="@dimen/d8"
                    android:layout_marginBottom="@dimen/d8"
                    android:layout_below="@id/txt_forget"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:backgroundTint="@android:color/white"
            android:layout_margin="@dimen/d16">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/text_apperence"
                    android:layout_margin="@dimen/d8"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MyTextInputLayout"
                    android:layout_below="@+id/txt_sign_in"
                    app:hintTextAppearance="@style/text_apperence">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_txt_user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:hint="USER ID" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MyTextInputLayout"
                    app:hintTextAppearance="@style/text_apperence"
                    android:layout_below="@+id/txt_user_id">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_txt_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/text_apperence"
                        android:textColor="@android:color/black"
                        android:hint="Password"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/txt_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_user_password"
                    android:layout_alignParentRight="true"
                    android:text="Forget Password"
                    android:layout_marginRight="24dp"
                    android:textAppearance="@style/text_apperence"/>
                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textColor="@android:color/white"
                    android:background="@drawable/corner_button_shape"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/d16"
                    android:layout_marginTop="@dimen/d8"
                    android:layout_marginBottom="@dimen/d8"
                    android:layout_below="@id/txt_forget"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_forget"
                    android:text="Create Account"
                    android:layout_margin="@dimen/d8"
                    android:textAppearance="@style/text_apperence"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/txt_formers_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_formers"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/s8"
            android:layout_below="@+id/crd_sign_in"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_former"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_formers_list"/>
        <TextView
            android:id="@+id/txt_consumer_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_conumsers"
            android:layout_below="@+id/rcv_former"
            android:layout_margin="@dimen/s8"
            android:textColor="@android:color/black"
            android:textSize="@dimen/s16" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_consumer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_consumer_list"/>
        <TextView
            android:id="@+id/txt_consumer_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View More>>"
            android:layout_margin="5sp"
            android:layout_below="@+id/rcv_consumer"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</ScrollView>